Release 6.0.24 (Not yet released)
-------------
 * [Ubuntu] Add packages for Ubuntu 24.10 "oracular".
 * [Ruby] Specify rackup version to avoid broken 1.0 gem. Closes GH-2559.
 * Upgrades Boost from 1.85 -> 1.86.
 * Updated various library versions used in precompiled binaries (used for e.g. gem installs):
   - ccache 4.10.1 -> 4.10.2
   - cmake 3.30.1 -> 3.30.4
   - curl 8.8.0 -> 8.10.1
   - git 2.45.2 -> 2.46.2
   - openssl 3.3.1 -> 3.3.2
   - rubygems 3.5.16 -> 3.5.20
   - rubies:
     - 3.2.4 -> 3.2.5
     - 3.3.4 -> 3.3.5


Release 6.0.23
-------------
 * [Enterprise] The rolling restart feature now replaces app processes in newest-to-oldest order, to make more efficient use of alive processes during the rolling-restart's duration. Closes GH-2551.
 * [Ruby] Improve Rack 3 compatibility.
 * [Nginx] Upgrades preferred Nginx to 1.26.1 from 1.26.0.
 * [Debian] Remove packages for Debian 10 Buster. (EOL 2024-07).
 * [Ubuntu] Add packages for Ubuntu 24.04 "noble".
 * [RPMs] Remove EL7 RPMs, CentOS7 is EOL.
 * Fixes compatibility with Ruby apps whose Gemfile.lock depends on strscan.
 * Adds option to render a custom error page when app fails to launch. Closes GH-2515.
   - Apache: PassengerCustomErrorPage "public/error.html"
   - Nginx: passenger_custom_error_page public/error.html;
   - Standalone: --custom-error-page public/error.html
 * Updated various library versions used in precompiled binaries (used for e.g. gem installs):
   - glibc 2.17 -> 2.28
   - ccache 4.9.1 -> 4.10.1
   - cmake 3.29.3 -> 3.30.1
   - curl 8.7.1 -> 8.8.0
   - git 2.45.0 -> 2.45.2
   - openssl 3.3.0 -> 3.3.1
   - pcre2 10.43 -> 10.44
   - libassuan 2.5.7 -> 3.0.1
   - libgcrypt 1.10.3 -> 1.11.0
   - libgpg_error 1.49 -> 1.50
   - libksba 1.6.6 -> 1.6.7
   - pinentry 1.3.0 -> 1.3.1
   - rubygems 3.5.10 -> 3.5.16
   - rubies:
     - dropped 3.0.7
     - 3.1.5 -> 3.1.6
     - 3.3.1 -> 3.3.4


Release 6.0.22
-------------
 * [RPM] Fix dependency on selinux-policy. Closes GH-2545.